@@ -3,3 +3,8 @@
 <p><a class="externallink" rel="nofollow" title="Caption" href="https://www.google.com">Caption</a></p>
 <p><a class="externallink" rel="nofollow" title="Multiple word caption" href="https://www.google.com">Multiple word caption</a></p>
 <p><a class="externallink" rel="nofollow" title="Bold caption" href="https://www.google.com"><b>Bold caption</b></a></p>
+<p><a class="externallink" rel="nofollow" title="http://www.google.com/page_(page)" href="http://www.google.com/page_(page)">http://www.google.com/page_(page)</a></p>
+<p>(<a class="externallink" rel="nofollow" title="http://www.google.com/page" href="http://www.google.com/page">http://www.google.com/page</a>)</p>
+<p>(<a class="externallink" rel="nofollow" title="http://www.google.com/page_(page)" href="http://www.google.com/page_(page)">http://www.google.com/page_(page)</a>)</p>
+<p><a class="externallink" rel="nofollow" title="http://www.google.com/page_()" href="http://www.google.com/page_()">http://www.google.com/page_()</a></p>
+<p>(<a class="externallink" rel="nofollow" title="http://www.google.com/page_()" href="http://www.google.com/page_()">http://www.google.com/page_()</a>)</p>
